--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -98,7 +98,7 @@ auto_update         "yes"
 # autodetection for one sound card.
 audio_output {
     type            "pulse"
-    name            "My Pulse Output"
+    name            "Audio Output (pulse)"
 }
 
 
@@ -110,7 +110,7 @@ audio_output {
 # 44100:16:2 for stereo visualization.
 audio_output {
     type            "fifo"
-    name            "my_fifo"
+    name            "Visualizer (fifo)"
     path            "/tmp/mpd.fifo"
     format          "44100:16:2"
 }
