--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -6,14 +6,7 @@
 
 # Directories #################################################################
 
-# Directory for storing ncmpcpp related files. Changing it is useful if you
-# want want to store everything somewhere else and provide command line setting
-# for alternative location to config file which defines that while launching
-# ncmpcpp.
 ncmpcpp_directory = ~/.config/ncmpcpp
-
-# Directory for storing downloaded lyrics. It defaults to ~/.lyrics since other
-# MPD clients (eg. ncmpc) also use that location.
 #lyrics_directory = ~/.lyrics
 
 
@@ -21,11 +14,10 @@ ncmpcpp_directory = ~/.config/ncmpcpp
 # Connection settings #########################################################
 
 mpd_host = 127.0.0.1
-
 mpd_port = 6600
 
 # Needed for tag editor and file operations to work.
-mpd_music_dir = ~/Music
+mpd_music_dir = /mnt/ntfs/Users/andre/Music
 
 
 
@@ -41,10 +33,6 @@ visualizer_output_name = "Visualizer feed"
 # If you set format to 44100:16:2, make it 'yes'.
 visualizer_in_stereo = yes
 
-# Multiply received samples by given value. Very useful for proper
-# visualization of quiet music.
-visualizer_sample_multiplier = 1
-
 # Note: Below parameter defines how often ncmpcpp has to "synchronize"
 # visualizer and audio outputs. 30 seconds is optimal value, but if you
 # experience synchronization problems, set it to lower value. Keep in mind that
@@ -52,10 +40,20 @@ visualizer_sample_multiplier = 1
 visualizer_sync_interval = 30
 
 # Available values: spectrum, wave, wave_filled, ellipse.
-visualizer_type = wave
+visualizer_type = spectrum
 
-visualizer_look = ●▮
+visualizer_look = ●▊
 
 # Alternative subset of 256 colors for terminals that support it.
-visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
+visualizer_color = 9, 3, 4, 5, 6, 7, 8, 8, 10, 2
+
+
+
+# UI look #####################################################################
+
+#progressbar_look = "━╾─"
+progressbar_look = "▓█░"
+
+header_visibility = no
+titles_visibility = no
 
