--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -17,10 +17,10 @@ rofi.scroll-method:     1
 rofi.font:              Oswald 20
 !rofi.font:              Archivo Narrow 20
 !                       bg       fg       altbg    hlbg     hlfg
-rofi.color-normal:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
-rofi.color-urgent:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
-rofi.color-active:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
-rofi.color-window:      #1b2b34, #1b2b34
+!rofi.color-normal:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
+!rofi.color-urgent:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
+!rofi.color-active:      #1b2b34, #c0c5ce, #1b2b34, #c0c5ce, #1b2b34
+!rofi.color-window:      #1b2b34, #1b2b34
 rofi.line-margin:       10
 rofi.separator-style:   none
 rofi.hide-scrollbar:    true
