--- a/.config/termite/config
+++ b/.config/termite/config
@@ -5,8 +5,6 @@
 
 
 [options]
-#font = Hack Regular 11
-#font = Iosevka Regular 12
 font = Iosevka Term 12
 browser = google-chrome-stable
 resize_grip = false
@@ -26,39 +24,32 @@ cursor_blink = off
 
 
 [colors]
-foreground      = #c0c5ce
-foreground_bold = #cdd3de
-cursor          = #c0c5ce
-background      = #1b2b34
+# extra
+background      = #1E2945
+foreground      = #FCE3D4
+cursor          = #FCE3D4
 # black, darkgrey
-color0  = #1b2b34
-color8  = #65737e
+color0  = #1E2945
+color8  = #787e8f
 # red
-color1  = #ec5f67
-color9  = #ec5f67
+color1  = #DBA168
+color9  = #DBA168
 # green
-color2  = #99c794
-color10 = #99c794
+color2  = #6F7C82
+color10 = #6F7C82
 # yellow
-color3  = #fac863
-color11 = #fac863
+color3  = #798387
+color11 = #798387
 # blue
-color4  = #6699cc
-color12 = #6699cc
+color4  = #9F9793
+color12 = #9F9793
 # purple
-color5  = #c594c5
-color13 = #c594c5
+color5  = #D3B19D
+color13 = #D3B19D
 # cyan
-color6  = #5fb3b3
-color14 = #5fb3b3
+color6  = #F0CCA3
+color14 = #F0CCA3
 # grey, white
-color7  = #c0c5ce
-color15 = #d8dee9
-# extra colours
-color16 = #f99157
-color17 = #ab7967
-color18 = #343d46
-color19 = #4f5b66
-color20 = #a7adba
-color21 = #cdd3de
+color7  = #FCE3D4
+color15 = #FCE3D4
 
