--- a/config/termite/config
+++ b/config/termite/config
@@ -6,6 +6,7 @@
 
 
 [options]
+
 allow_bold          = true
 audible_bell        = false
 clickable_url       = true
@@ -25,24 +26,45 @@ urgent_on_bell      = true
 
 
 [colors]
-background  = #25292C
-foreground  = #D0DECF
-cursor      = #D0DECF
 
-color0      = #25292C
-color1      = #5A97A7
-color2      = #67A9B1
-color3      = #77C0C1
-color4      = #A2B1A8
-color5      = #B7C6B8
-color6      = #ACCDC4
-color7      = #D0DECF
-color8      = #7c7e80
-color9      = #5A97A7
-color10     = #67A9B1
-color11     = #77C0C1
-color12     = #A2B1A8
-color13     = #B7C6B8
-color14     = #ACCDC4
-color15     = #D0DECF
+# background  = #071d22
+# foreground  = #ffffff
+# cursor      = #ffffff
+# color0      = #071d22
+# color1      = #f8a1aa
+# color2      = #8cc495
+# color3      = #f0e0aa
+# color4      = #8ab6c2
+# color5      = #94a9d9
+# color6      = #7eb5ac
+# color7      = #b3bec1
+# color8      = #617278
+# color9      = #e9b3bf
+# color10     = #ade1b6
+# color11     = #fbf1cf
+# color12     = #b5dbe4
+# color13     = #b6cbfa
+# color14     = #a3d0c8
+# color15     = #f7f8f8
+
+
+background  = #25292c
+foreground  = #f1eff0
+cursor      = #f1eff0
+color0      = #47474b
+color1      = #ad7189
+color2      = #a0bc93
+color3      = #f0be7e
+color4      = #69a0b7
+color5      = #aba1d0
+color6      = #7acadb
+color7      = #e8e5dc
+color8      = #747073
+color9      = #c59aab
+color10     = #b8cdae
+color11     = #fae2ae
+color12     = #a1c4d2
+color13     = #c7c0df
+color14     = #acdee8
+color15     = #f5f4f1
 
