--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -218,6 +218,7 @@ partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
 partial_completion_other = off
+partial_completion_templates = "config_options"
 
 [history]
 display_default = 5
@@ -357,8 +358,7 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "lua;matrix;1"
-default.window = "1;0;0;0;lua;matrix"
+default.window = "1;0;0;0;core;weechat"
 default.current = on
 
 [notify]
