--- a/config/polybar/config
+++ b/config/polybar/config
@@ -7,7 +7,7 @@
 [color]
 bg-0        = #00000000
 bg-1        = #22000000
-darkgrey    = ${xrdb:color8}
+darkgrey    = ${xrdb:color5}
 white       = ${xrdb:color15}
 
 
@@ -40,7 +40,8 @@ padding-right = 3
 padding-left = 2
 
 font-0 = Iosevka:size=20;4
-font-1 = Material Icons:size=18;5
+font-1 = Material Icons:size=18;6
+font-2 = Font Awesome:size=16;4
 ;font-3 = Noto Emoji:size=14;3
 
 modules-left = bspwm
@@ -204,29 +205,21 @@ ramp-capacity-4 = 
 type = internal/backlight
 card = intel_backlight
 
-format = <ramp> <label>
-label = %percentage%
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+format = <label>
+label =  %percentage%
 
 
 
 [module/volume]
 type = internal/volume
 
-format-volume =  <label-volume>
+format-volume = <label-volume>
 ;format-volume = <ramp-volume> <label-volume>
 format-muted = <label-muted>
 
-label-volume = %percentage%
+label-volume =  %percentage%
 label-muted =  %percentage%
 label-muted-foreground = ${color.darkgrey}
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
 
 
 
@@ -251,18 +244,12 @@ type = internal/network
 interface = wlp2s0
 interval = 5
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 
-label-connected = %essid% ┊ %signal%
+label-connected =  %essid% ┊ %signal%
 label-disconnected =  disconnected
 label-disconnected-foreground = ${color.darkgrey}
-
-ramp-signal-0 = 
-ramp-signal-0-foreground = ${color.darkgrey}
-ramp-signal-1 = 
-ramp-signal-1-foreground = ${color.darkgrey}
-ramp-signal-2 = 
 
 
 
