--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -57,9 +57,10 @@ message_delay_time = 1
 
 song_columns_list_format = "(45)[red]{a|A} (8f)[white]{lr} (45)[blue]{tr}"
 
-progressbar_look = "▒▒░"
-progressbar_color = "black:b"
-progressbar_elapsed_color = "white:b"
+# progressbar_look = "▒▒░"
+progressbar_look = "━━━"
+progressbar_color = "black"
+progressbar_elapsed_color = "white"
 
 
 header_visibility = "no"
