--- a/config/termite/config
+++ b/config/termite/config
@@ -14,7 +14,7 @@ hyperlinks          = true
 cursor_blink        = off
 cursor_shape        = block
 dynamic_title       = true
-font                = Iosevka Term 12
+font                = Iosevka 12
 mouse_autohide      = true
 scrollback_lines    = 10000
 scrollbar           = off
