--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,5 +1,45 @@
 
-image="$WALLPAPER"
-indicator-caps-lock
 font=Iosevka
+
+indicator-caps-lock
+indicator-radius=80
+indicator-thickness=14
+
+color=000000
+
+bs-hl-color=bbe6a5
+caps-lock-bs-hl-color=ffda85
+caps-lock-key-hl-color=ffda85
+
+inside-color=00000000
+inside-clear-color=00000000
+inside-caps-lock-color=00000000
+inside-ver-color=00000000
+inside-wrong-color=00000000
+
+key-hl-color=bbe6a5
+
+layout-bg-color=000000
+layout-border-color=000000
+layout-text-color=00000000
+
+line-color=00000000
+line-clear-color=00000000
+line-caps-lock-color=00000000
+line-ver-color=00000000
+line-wrong-color=00000000
+
+ring-color=9ce677
+ring-clear-color=00000000
+ring-caps-lock-color=ffcc66
+ring-ver-color=66b3ff
+ring-wrong-color=ff526f
+
+separator-color=0f111a
+
+text-color=9ce677
+text-clear-color=66b3ff
+text-caps-lock-color=ffcc66
+text-ver-color=66b3ff
+text-wrong-color=ff526f
 
