--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,12 +9,13 @@
 
 allow_bold          = true
 audible_bell        = false
+bold_is_bright      = true
 clickable_url       = true
 hyperlinks          = true
 cursor_blink        = off
 cursor_shape        = block
 dynamic_title       = true
-font                = Iosevka 12
+font                = Iosevka 11
 mouse_autohide      = true
 scrollback_lines    = 10000
 scrollbar           = off
@@ -27,22 +28,33 @@ urgent_on_bell      = true
 
 [colors]
 
-background  = #222326
-foreground  = #c7c8c8
-color0      = #47474b
-color1      = #ad7189
-color2      = #a0bc93
-color3      = #f0be7e
-color4      = #69a0b7
-color5      = #aba1d0
-color6      = #7acadb
-color7      = #e8e5dc
-color8      = #747073
-color9      = #c59aab
-color10     = #b8cdae
-color11     = #fae2ae
-color12     = #a1c4d2
-color13     = #c7c0df
-color14     = #acdee8
-color15     = #f5f4f1
+# special
+foreground      = #cccccc
+foreground_bold = #fcfcfc
+# cursor          = #cccccc
+background      = #0f111a
+# black
+color0          = #292933
+color8          = #525266
+# red
+color1          = #ff526f
+color9          = #ff8599
+# green
+color2          = #9ce677
+color10         = #bbe6a5
+# yellow
+color3          = #ffcc66
+color11         = #ffda85
+# blue
+color4          = #66b3ff
+color12         = #99ccff
+# magenta
+color5          = #cc99ff
+color13         = #dbb8ff
+# cyan
+color6          = #66e6ff
+color14         = #99eeff
+# white
+color7          = #cccccc
+color15         = #fcfcfc
 
