add small adjustments

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -15,7 +15,7 @@ hyperlinks          = true
 cursor_blink        = off
 cursor_shape        = block
 dynamic_title       = true
-font                = Iosevka 11
+font                = Iosevka Term 11
 mouse_autohide      = true
 scrollback_lines    = 10000
 scrollbar           = off
